some more bullets, very rough

--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
             </h3>
             <p>June 2020 - Present</p>
           </span>
+          <ul>
+            <li>Upgraded most of company from Node 10 to Node 14</li>
+            <li>Co-owned primary development service mesh used by 80%+ of Convoy developers</li>
+            <li>Sped up end-to-end tests company wide by ~35%</li>
+            <li>Used operational excellence meetings to drive more reliable CI and deploy workflows</li>
+            <li>Created dashboards to incentivize teams to drive up code coverage</li>
+            <li>Mentored fellow engineers from non-university background</li>
+            <li>Planned project to identify old 3-char UID in code during transition to 6-char UID</li>
+          </ul>
         </div>
         <br />
         <div class="subsection">
@@ -239,12 +248,12 @@
         <h2>Skills</h2>
         <ul>
           <li>
-            <span class="bold">Languages:</span> Javascript, Typescript, Java/Groovy, Rust, Python,
+            <span class="bold">Languages:</span> Javascript, Typescript, a little Rust, Python,
             and R
           </li>
           <li>
             <span class="bold">Technologies:</span> GraphQL, React, Vue, SvelteJS, SQL, (S)CSS, and
-            AWS/Azure/GCP
+            AWS
           </li>
           <li>
             <span class="bold">Other:</span> Public speaking, technical writing, scrum, and
