Move index.html

--- a/src/index.html
+++ b/src/index.html
@@ -63,18 +63,6 @@
         </div>
       </div>
 
-      <div class="section" id="education">
-        <h2>Education</h2>
-        <ul>
-          <li>
-            Vanderbilt University (2020) — B.S. in Computer Science; Minor in World Politics
-          </li>
-          <li>
-            Illinois Mathematics & Science Academy (2016) — Received Diploma
-          </li>
-        </ul>
-      </div>
-
       <div class="section" id="work">
         <h2>Experience</h2>
 
@@ -147,6 +135,23 @@
           </ul>
         </div>
       </div>
+
+      <div class="section" id="skills">
+        <h2>Technical Skills</h2>
+        <ul>
+          <li><span class="bold">Strongest languages:</span> Javascript, Typescript, and Golang</li>
+          <li><span class="bold">Strong languages:</span> Rust, Java, Python, and R</li>
+
+          <li>
+            <span class="bold">Web technologies:</span> GraphQL, React, Vue, SvelteJS, and CSS
+          </li>
+          <li>
+            <span class="bold">DevOps technologies:</span> Docker, Kubernetes, Helm, Istio, AWS, and
+            Terraform
+          </li>
+        </ul>
+      </div>
+
       <div class="section" id="Projects">
         <h2>Selected (Personal) Projects</h2>
 
@@ -235,20 +240,14 @@
         </div>
       </div>
 
-      <div class="section" id="skills">
-        <h2>Skills</h2>
+      <div class="section" id="education">
+        <h2>Education</h2>
         <ul>
           <li>
-            <span class="bold">Languages:</span> Javascript, Typescript, Java/Groovy, Rust, Python,
-            and R
+            Vanderbilt University (2020) — B.S. in Computer Science; Minor in World Politics
           </li>
           <li>
-            <span class="bold">Technologies:</span> GraphQL, React, Vue, SvelteJS, SQL, (S)CSS, and
-            AWS/Azure/GCP
-          </li>
-          <li>
-            <span class="bold">Other:</span> Public speaking, technical writing, scrum, and
-            mentorship
+            Illinois Mathematics & Science Academy (2016) — Received Diploma
           </li>
         </ul>
       </div>
