Post convoy enhancements

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body class="letter">
     <div class="sheet">
       <div id="header">
-        <div id="rightText">
+        <div id="leftText">
           <h1><a target="_blank" rel="noopener" href="https://benc.io">Benjamin Cooper</a></h1>
           <!-- should this be something else? -->
         </div>
@@ -41,8 +41,8 @@
             </svg>
 
             <p>
-              <a href="mailto:bencooper222@gmail.com">
-                bencooper222@gmail.com
+              <a href="mailto:benc@hey.com">
+                benc@hey.com
               </a>
             </p>
           </span>
@@ -69,12 +69,59 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
+              Convoy | <span class="nobold">Senior Software Engineer on Foundation Platforms</span>
+            </h3>
+            <p>2022 - 2023</p>
+          </span>
+          <ul>
+            <li>
+              Led three-person team to develop new microservice test & development environment using
+              Kubernetes
+              <ul>
+                <li>Worked with 3P vendors to determine Convoy needed to build, not buy</li>
+                <li>Collected customer requirements and designed corresponding architecture</li>
+                <li>
+                  Reduced E2E test times by eleven minutes (~92%)
+                </li>
+              </ul>
+            </li>
+            <li>
+              Developed and executed Standard Operating Procedure for Convoy's first Kubernetes and
+              Istio upgrades
+              <ul>
+                <li>Unlocked 33% data transfer spend savings</li>
+              </ul>
+            </li>
+            <li>
+              Standardized docker image building company-wide to be SOC2 compliant and easy for all
+              developers
+            </li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <span>
+            <h3 class="bold">
               Convoy | <span class="nobold">Software Engineer on Platform & Test</span>
             </h3>
-            <p>June 2020 - Present</p>
+            <p>2020 - 2022</p>
           </span>
+          <ul>
+            <li>Improved E2E test times by four minutes (25%) by dockerizing test runner</li>
+            <li>
+              Worked with vendor to establish service ownership and health registry for ~200
+              microservices
+            </li>
+            <li>
+              Owned operational metrics: kept 90%+ of services up-to-date on dependencies and drove
+              down # of pages
+            </li>
+            <li>
+              Led 3-person team to eliminate all x86 developer dependencies to prepare for Apple
+              Silicon Macs
+            </li>
+          </ul>
         </div>
-        <br />
         <div class="subsection">
           <span>
             <h3 class="bold">
@@ -83,8 +130,9 @@
             <p>Summer 2019</p>
           </span>
           <ul>
-            <li>Implemented artifact caching for internal CI system in Java & Ruby</li>
-            <li>Wrote project pitch & technical design document</li>
+            <li>
+              Implemented artifact caching for internal continuous integration system in Java & Ruby
+            </li>
             <li>Saved thousands of developer & compute hours each week</li>
           </ul>
         </div>
@@ -97,11 +145,9 @@
             <p>Summer 2018</p>
           </span>
           <ul>
-            <li>Designed problem and solution views for students</li>
             <li>
-              Worked with Node, Hapi.js, React, HTML Canvas, and ES2018 on massive codebase
+              Designed web-based interactive math problems for students using React & Node
             </li>
-            <li>Fixed post-launch bugs for live users</li>
           </ul>
         </div>
 
@@ -113,10 +159,7 @@
             <p>2016 - 2020</p>
           </span>
           <ul>
-            <li>Organized two 500+ attendee hackathons</li>
-            <li>Managed $80K budget; drove down expenses to expand number of attendees by ~20%</li>
-            <li>Led 50 person organizing team across 5 committees</li>
-            <li>Expanded mini-hackathon program to spread CS culture on campus</li>
+            <li>Organized three 500+ attendee hackathons with collective ~$250K budget</li>
           </ul>
         </div>
 
@@ -127,43 +170,57 @@
             </h3>
             <p>Summer 2016</p>
           </span>
-          <ul>
-            <li>
-              Built Slack chatbot in Groovy (JVM) to help 10 person remote team classify billable
-              hours
-            </li>
-          </ul>
+          <!-- idk why this has to be here and empty -->
+          <ul></ul>
         </div>
       </div>
-
+      <div class="section" id="education">
+        <h2>Education</h2>
+        <ul>
+          <li>
+            Vanderbilt University (2020) — B.S. in Computer Science; Minor in World Politics
+          </li>
+          <li>
+            Illinois Mathematics & Science Academy (2016) — Received Diploma
+          </li>
+        </ul>
+      </div>
       <div class="section" id="skills">
         <h2>Technical Skills</h2>
         <ul>
           <li><span class="bold">Strongest languages:</span> Javascript, Typescript, and Golang</li>
-          <li><span class="bold">Strong languages:</span> Rust, Java, Python, and R</li>
+          <li><span class="bold">Familiar languages:</span> Rust, Java, C#, Python, and R</li>
 
+          <li><span class="bold">Web technologies:</span> GraphQL, React, SvelteJS, and CSS</li>
           <li>
-            <span class="bold">Web technologies:</span> GraphQL, React, Vue, SvelteJS, and CSS
+            <span class="bold">DevOps technologies:</span> Kubernetes, Istio, AWS, and Terraform
           </li>
-          <li>
-            <span class="bold">DevOps technologies:</span> Docker, Kubernetes, Helm, Istio, AWS, and
-            Terraform
-          </li>
+          <li><span class="bold">Tools:</span> Docker, Git, SQL, Kafka, and Bash</li>
         </ul>
       </div>
 
       <div class="section" id="Projects">
-        <h2>Selected (Personal) Projects</h2>
-
+        <h2>Personal Projects</h2>
+        <div class="subsection">
+          <span>
+            <h3 class="bold" class="bold">Seattle Surf Incubator: AI Hackathon</h3>
+            <p>Mar 2023</p>
+          </span>
+          <ul>
+            <li>
+              Created browser extension that uses GPT-4 API to change website in response to prompt
+            </li>
+          </ul>
+        </div>
         <div class="subsection">
           <span>
             <h3 class="bold">Vaken</h3>
             <p>2019</p>
           </span>
           <ul>
-            <li>Building open-source hackathon management platform</li>
-            <li>Deploying dev tooling to increase project velocity</li>
-            <li>Built with Typescript, GraphQL, and React Hooks</li>
+            <li>
+              Built open-source hackathon management platform with cutting-edge web technologies
+            </li>
             <li>
               Visit:
               <a target="_blank" rel="noopener" href="https://github.com/VandyHacks/vaken">
@@ -179,8 +236,10 @@
             <p>Feb 2019</p>
           </span>
           <ul>
-            <li>Won 2<sup>nd</sup> place at HackIllinois out of ~120 entries</li>
-            <li>Built no-config HMR for Rust modules for open source Javascript bundler</li>
+            <li>
+              Built no-config hot-module reloading for Rust modules for open-source Javascript
+              bundler
+            </li>
             <li>
               Visit:
               <a
@@ -193,27 +252,17 @@
             </li>
           </ul>
         </div>
-        <div class="subsection">
-          <span>
-            <h3 class="bold">Github Actions Open Source Contributions</h3>
-            <p>2019</p>
-          </span>
-          <ul>
-            <li>Wrote 2 Github integrations to extend repository functionaliy</li>
-            <li>Contributed to several other open source actions</li>
-          </ul>
-        </div>
 
         <div class="subsection">
           <span>
             <h3 class="bold">Firefox Address Bar Expression Parser</h3>
-            <p>2019</p>
+            <p>2019 - Present</p>
           </span>
           <ul>
             <li>
-              Built and released Firefox extension to match Chrome's omnibox's calculator
+              Built and released Firefox extension to match Chrome's built-in calculator (still
+              maintained)
             </li>
-            <li>More accurate than competing extensions for floating point operations</li>
             <li>
               Visit:
               <a
@@ -225,31 +274,6 @@
             </li>
           </ul>
         </div>
-
-        <div class="subsection">
-          <span>
-            <h3 class="bold" class="bold">ArchHacks: Brush Brush Revolution</h3>
-            <p>Nov 2016</p>
-          </span>
-          <ul>
-            <li>
-              Awarded 1<sup>st</sup> place and Most Technically Interesting out of 100+ submissions
-            </li>
-            <li>Used computer vision to track & analyze brushing habits</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="section" id="education">
-        <h2>Education</h2>
-        <ul>
-          <li>
-            Vanderbilt University (2020) — B.S. in Computer Science; Minor in World Politics
-          </li>
-          <li>
-            Illinois Mathematics & Science Academy (2016) — Received Diploma
-          </li>
-        </ul>
       </div>
     </div>
     <script src="node_modules/instant.page/instantpage.js" type="module" defer></script>
