Fix some content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
-              Convoy | <span class="nobold">Senior Software Engineer on Foundation Platforms</span>
+              Convoy |
+              <span class="nobold"
+                >Senior Software Engineer on Production & Development Experience</span
+              >
             </h3>
             <p>2022 - 2023</p>
           </span>
@@ -78,22 +81,24 @@
               Led three-person team to develop new microservice test & development environment using
               Kubernetes
               <ul>
-                <li>Worked with 3P vendors to determine Convoy needed to build, not buy</li>
+                <li>
+                  Worked with third-party vendors to determine Convoy needed to build instead of buy
+                </li>
                 <li>Collected customer requirements and designed corresponding architecture</li>
                 <li>
-                  Reduced E2E test times by eleven minutes (~92%)
+                  Reduced E2E test times by 11 minutes (~92%)
                 </li>
               </ul>
             </li>
             <li>
-              Developed and executed Standard Operating Procedure for Convoy's first Kubernetes and
-              Istio upgrades
+              Developed and executed standard procedure for Convoy's first Kubernetes and Istio
+              upgrades
               <ul>
-                <li>Unlocked 33% data transfer spend savings</li>
+                <li>Upgrade enabled 33% reduction in AWS data transfer spend</li>
               </ul>
             </li>
             <li>
-              Standardized docker image building company-wide to be SOC2 compliant and easy for all
+              Standardized company-wide Docker image building to be SOC2 compliant and easy for all
               developers
             </li>
           </ul>
@@ -113,11 +118,11 @@
               microservices
             </li>
             <li>
-              Owned operational metrics: kept 90%+ of services up-to-date on dependencies and drove
-              down # of pages
+              Owned operational metrics: kept ~180 of 200 services up-to-date and drove down # of
+              on-call pages
             </li>
             <li>
-              Led 3-person team to eliminate all x86 developer dependencies to prepare for Apple
+              Led four-person team to eliminate all x86 developer dependencies to prepare for Apple
               Silicon Macs
             </li>
           </ul>
@@ -131,9 +136,9 @@
           </span>
           <ul>
             <li>
-              Implemented artifact caching for internal continuous integration system in Java & Ruby
+              Implemented artifact caching for continuous integration system in Java & Ruby
             </li>
-            <li>Saved thousands of developer & compute hours each week</li>
+            <li>Saved thousands of developer & compute hours per week</li>
           </ul>
         </div>
 
@@ -153,43 +158,53 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">
-              VandyHacks IV & V | <span class="nobold">President, Director & Mentor</span>
-            </h3>
+            <h3 class="bold">VandyHacks IV & V | <span class="nobold">President</span></h3>
             <p>2016 - 2020</p>
           </span>
           <ul>
-            <li>Organized three 500+ attendee hackathons with collective ~$250K budget</li>
+            <li>Organized three hackathons with annual $80K budget and 500+ attendees</li>
           </ul>
-        </div>
-
-        <div class="subsection">
-          <span>
-            <h3 class="bold">
-              Spantree Technology Group | <span class="nobold">Software Engineering Intern</span>
-            </h3>
-            <p>Summer 2016</p>
-          </span>
-          <!-- idk why this has to be here and empty -->
-          <ul></ul>
         </div>
       </div>
       <div class="section" id="education">
         <h2>Education</h2>
-        <ul>
+        <div class="subsection">
+          <span>
+            <h3 class="bold" class="bold">
+              Vanderbilt University |
+              <span class="nobold"> B.S. in Computer Science; Minor in World Politics </span>
+            </h3>
+
+            <p>2020</p>
+          </span>
+          <ul></ul>
+        </div>
+        <div class="subsection">
+          <span>
+            <h3 class="bold" class="bold">
+              Illinois Mathematics and Science Academy |
+              <span class="nobold"> Received Diploma </span>
+            </h3>
+
+            <p>2016</p>
+          </span>
+          <ul></ul>
+        </div>
+
+        <!-- <ul>
           <li>
             Vanderbilt University (2020) — B.S. in Computer Science; Minor in World Politics
           </li>
           <li>
             Illinois Mathematics & Science Academy (2016) — Received Diploma
           </li>
-        </ul>
+        </ul> -->
       </div>
       <div class="section" id="skills">
-        <h2>Technical Skills</h2>
+        <h2>Skills</h2>
         <ul>
           <li><span class="bold">Strongest languages:</span> Javascript, Typescript, and Golang</li>
-          <li><span class="bold">Familiar languages:</span> Rust, Java, C#, Python, and R</li>
+          <li><span class="bold">Proficient languages:</span> Rust, Java, C#, Python, and R</li>
 
           <li><span class="bold">Web technologies:</span> GraphQL, React, SvelteJS, and CSS</li>
           <li>
@@ -200,7 +215,7 @@
       </div>
 
       <div class="section" id="Projects">
-        <h2>Personal Projects</h2>
+        <h2>Projects</h2>
         <div class="subsection">
           <span>
             <h3 class="bold" class="bold">Seattle Surf Incubator: AI Hackathon</h3>
@@ -208,18 +223,19 @@
           </span>
           <ul>
             <li>
-              Created browser extension that uses GPT-4 API to change website in response to prompt
+              Created browser extension that uses GPT-4 API to dynamically change website UI based
+              on user prompt
             </li>
           </ul>
         </div>
         <div class="subsection">
           <span>
             <h3 class="bold">Vaken</h3>
-            <p>2019</p>
+            <p>2019 - 2020</p>
           </span>
           <ul>
             <li>
-              Built open-source hackathon management platform with cutting-edge web technologies
+              Built open-source hackathon management platform with GraphQL & React
             </li>
             <li>
               Visit:
@@ -232,12 +248,12 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">HackIllinois: Rust Hot Module Reloading (HMR)</h3>
+            <h3 class="bold">HackIllinois: Rust Hot Module Reloading</h3>
             <p>Feb 2019</p>
           </span>
           <ul>
             <li>
-              Built no-config hot-module reloading for Rust modules for open-source Javascript
+              Contributed no-config hot-module reloading for Rust modules to open-source Javascript
               bundler
             </li>
             <li>
