Add a bullet for wiki migration

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
               Standardized company-wide Docker image building to be SOC2 compliant and easy for all
               developers
             </li>
+            <li>
+              Led technical side of internal wiki migration; wrote data scraper/exporter when vendor
+              tool did not work
+            </li>
           </ul>
         </div>
 
@@ -206,7 +210,9 @@
           <li><span class="bold">Strongest languages:</span> Javascript, Typescript, and Golang</li>
           <li><span class="bold">Proficient languages:</span> Rust, Java, C#, Python, and R</li>
 
-          <li><span class="bold">Web technologies:</span> GraphQL, React, SvelteJS, and CSS</li>
+          <li>
+            <span class="bold">Web technologies:</span> GraphQL, TypeORM, React, SvelteJS, and CSS
+          </li>
           <li>
             <span class="bold">DevOps technologies:</span> Kubernetes, Istio, AWS, and Terraform
           </li>
