Remove language from AWS entry

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </span>
           <ul>
             <li>
-              Implemented artifact caching for continuous integration system in Java & Ruby
+              Implemented artifact caching for continuous integration system
             </li>
             <li>Saved thousands of developer & compute hours per week</li>
           </ul>
