Make first Convoy team name more clear

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
-              Convoy | <span class="nobold">Software Engineer on Platform & Test</span>
+              Convoy |
+              <span class="nobold">Software Engineer on Development & Test Experience</span>
             </h3>
             <p>2020 - 2022</p>
           </span>
