Be a bit more specific about system requirements

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                 <li>
                   Worked with third-party vendors to determine Convoy needed to build instead of buy
                 </li>
-                <li>Collected customer requirements and designed system architecture</li>
+                <li>
+                  Interviewed customers to collect requirements and designed system architecture
+                </li>
                 <li>
                   Reduced E2E test times by 11 minutes (~92%)
                 </li>
