--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               Developed and executed standard procedure for Convoy's first Kubernetes and Istio
               upgrades
               <ul>
-                <li>Upgrade enabled 33% reduction in AWS data transfer spend</li>
+                <li>Upgrade unlocked 33% reduction in AWS data transfer spend</li>
               </ul>
             </li>
             <li>
