--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
-              Convoy |
+              Convoy & Flexport (via acquisition) |
               <span class="nobold"
                 >Senior Software Engineer on Production & Development Experience</span
               >
